2006-12-18 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b26

 * Change: Check for existing album dir in gallerySanityCheck()

 * New: function gdAvailable()

 * New: function enableCaptcha()

 * New: Additional Option in setup : enableCaptcha (for comments)
	- no : No captcha at all
	- yes: Captcha for everybody
	- anonymous: Captcha only for not logged in users.

   Config Version bump -> 100 !

2006-12-18 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b25

 * Fix: Typo in lib/Form.php

 * New: Function printInfoBox()

2006-12-05 Chris Kelly <ckdake@ckdake.com> 1.6-alpha3-svn-b24

 * Fix: proper svn keywords in files, this will make the up to date
	check in setup not complain when it looks in the manifest file

2006-12-01 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b23

 * NEW: !!! CAPTCHA SUPPORT !!!

 Added exprimental captcha support.

 Used hn_captcha classes from Horst Nogajski, horst AT nogajski DOT de

 * New files:
	- includes/captcha/COM430.TTF
	- includes/captcha/captcha_init.php
	- classes/hn_captcha/hn_captcha.x1.example.php
	- classes/hn_captcha/hn_captcha.class.php
	- classes/hn_captcha/hn_captcha.example.php
	- classes/hn_captcha/hn_captcha.class.x1.php

2006-12-01 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b22

 * NEW: !!! GROUP SUPPORT !!!

 Added experimental group support for Gallery users.
 You can add, delete and modify Gallery groups.
 Groups from an enviroment are not recognized.

 * New files:
	- lib/groups.php
	- js/selectBoxHandling.js
	- popups/modify_group.php
	- popups/delete_group.php
	- popups/create_group.php
	- popups/manage_groups.php
	- classes/Group.php
	- classes/gallery/Group.php

 * Change: Tweaked drawSelect() and drawSelect()

2006-12-01 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b21

 * Fix: Metainfo during upload.

2006-12-01 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b20

 Text changes in includes/setup/checks.inc and setup/welcome.inc 

2006-12-01 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b19
