@@ -23,8 +23,6 @@
 <?php
 
 require_once(dirname(dirname(__FILE__)) . '/init.php');
-require_once(dirname(dirname(__FILE__)) . '/classes/hn_captcha/hn_captcha.class.x1.php');
-require_once(dirname(dirname(__FILE__)) . '/includes/captcha/captcha_init.php');
 
 /* Hack check*/
 if (!$gallery->user->canAddComments($gallery->album)) {
@@ -32,80 +30,87 @@ if (!$gallery->user->canAddComments($gallery->album)) {
 	exit;
 }
 
-list($save, $id, $commenter_name, $comment_text) =
-    getRequestVar(array('save', 'id', 'commenter_name', 'comment_text'));
+if(enableCaptcha()) {
+	require_once(dirname(dirname(__FILE__)) . '/classes/hn_captcha/hn_captcha.class.x1.php');
+	require_once(dirname(dirname(__FILE__)) . '/includes/captcha/captcha_init.php');
+	$captcha =& new hn_captcha_X1($CAPTCHA_INIT);
+}
 
-$captcha =& new hn_captcha_X1($CAPTCHA_INIT);
+list($save, $id, $commenter_name, $comment_text) =
+	getRequestVar(array('save', 'id', 'commenter_name', 'comment_text'));
 
 $notice_messages = array();
 
 if ($gallery->user->isLoggedIn() ) {
-    if (empty($commenter_name) || $gallery->app->comments_anonymous == 'no') {
+	if (empty($commenter_name) || $gallery->app->comments_anonymous == 'no') {
 	   $commenter_name = $gallery->user->printableName($gallery->app->name_display);
-    }
+	}
 }
 elseif (!isset($commenter_name)) {
-    $commenter_name = '';
+	$commenter_name = '';
 }
 
 if (empty($comment_text)) {
-    $comment_text = '';
+	$comment_text = '';
 }
 
 $maxlength = isset($gallery->app->comments_length) ? $gallery->app->comments_length : 0;
 
 if (isset($save)) {
-    if (empty($commenter_name) || empty($comment_text)) {
-    	$notice_messages[] = array(
-                    'type' => 'error',
-                    'text' => gTranslate('core', "Name and comment are both required to save a new comment!")
-    	);
-    }
+	if (empty($commenter_name) || empty($comment_text)) {
+		$notice_messages[] = array(
+			'type' => 'error',
+			'text' => gTranslate('core', "Name and comment are both required to save a new comment!")
+		);
+	}
 
-    if ($maxlength >0 && strlen($comment_text) > $maxlength) {
-    	$notice_messages[] = array(
-                    'type' => 'error',
-                    'text' => sprintf(gTranslate('core', "Your comment is too long, the admin set maximum length to %d chars"), $maxlength)
-    	);
-    }
+	if ($maxlength >0 && strlen($comment_text) > $maxlength) {
+		$notice_messages[] = array(
+			'type' => 'error',
+			'text' => sprintf(gTranslate('core', "Your comment is too long, the admin set maximum length to %d chars"), $maxlength)
+		);
+	}
 
-    if (isBlacklistedComment($tmp = array('commenter_name' => $commenter_name, 'comment_text' => $comment_text), false)) {
-    	$notice_messages[] = array(
-                    'type' => 'error',
-                    'text' => gTranslate('core', "Your Comment contains forbidden words. It will not be added.")
-    	);
-    }
+	if (!empty($comment_text) &&
+		isBlacklistedComment($tmp = array('commenter_name' => $commenter_name, 'comment_text' => $comment_text), false))
+	{
+		$notice_messages[] = array(
+			'type' => 'error',
+			'text' => gTranslate('core', "Your comment contains forbidden words. It will not be added.")
+		);
+	}
 
+	if(enableCaptcha()) {
+		switch($captcha->validate_submit()) {
+			case 1:
+				// PUT IN ALL YOUR STUFF HERE //
+				echo "<p><br>Congratulation. You will get the resource now.";
+				echo "<br><br><a href=\"".$_SERVER['PHP_SELF']."?download=yes&id=1234\">New DEMO</a></p>";
+				break;
 
-    switch($captcha->validate_submit()) {
-        case 1:
-            // PUT IN ALL YOUR STUFF HERE //
-            echo "<p><br>Congratulation. You will get the resource now.";
-            echo "<br><br><a href=\"".$_SERVER['PHP_SELF']."?download=yes&id=1234\">New DEMO</a></p>";
-            break;
+			case 2:
+				$notice_messages[] = array(
+					'type' => 'error',
+					'text' => gTranslate('core', "You didn't enter the correct chars/numbers.")
+				);
+				break;
+		}
+	}
 
-        case 2:
-            $notice_messages[] = array(
-                'type' => 'error',
-                'text' => gTranslate('core', "You didn't enter the correct chars/numbers.")
-            );
-            break;
-    }
+	// Everything went fine, add the comment
+	if(empty($notice_messages)) {
+		$comment_text = strip_tags($comment_text);
+		$commenter_name = strip_tags($commenter_name);
+		$IPNumber = $_SERVER['REMOTE_ADDR'];
+		$gallery->album->addComment($id, $comment_text, $IPNumber, $commenter_name);
 
-    // Everything went fine, add the comment
-    if(empty($notice_messages)) {
-    	$comment_text = strip_tags($comment_text);
-    	$commenter_name = strip_tags($commenter_name);
-    	$IPNumber = $_SERVER['REMOTE_ADDR'];
-    	$gallery->album->addComment($id, $comment_text, $IPNumber, $commenter_name);
+		$gallery->album->save();
+		emailComments($id, $comment_text, $commenter_name);
 
-    	$gallery->album->save();
-    	emailComments($id, $comment_text, $commenter_name);
-
-    	// Note: In stats.php this causes the browser to show a message about POST data ...
-    	dismissAndReload();
-    	return;
-    }
+		// Note: In stats.php this causes the browser to show a message about POST data ...
+		dismissAndReload();
+		return;
+	}
 }
 printPopupStart(gTranslate('core', "Add Comment"));
 
